# telemetry-server

./: .gitignore  BagheeraIntegration.md  CMakeLists.txt  Deduplication.md  Makefile  MapReduce.md  README.md  StorageFormat.md  StorageLayout.md  TODO.md  benchmark_server.py  compress.py  compressor.py  convert.py  decompress.py  export.py  filter_list.py  get_compressables.py  get_compressibles.py  get_histogram_tools.sh  histogram_server.py  job.py  list_all_s3_keys.py  persist.py  process_incoming.py  process_incoming_combine.py  process_incoming_mp.py  process_incoming_serial.py  process_inline.py  revision_cache.py  server.py  split_raw_log.py  telemetry_schema.json  telemetry_schema.py  telemetry_server_config.example.json  test_convert.py  test_input_filter.py  test_revision_cache.py
analysis/: analysis-worker-stack.yaml  downloader.py  helpers.py  launcher.py  makefile  manager.py  test-filter.json  utils.py  worker.py
aws_provisioning/: add_dummy_nginx_endpoint.py  aws_launcher.py  aws_telemetry_server_config.example.json  aws_telemetry_server_config.prod.json  aws_telemetry_server_config.prod_secondary.json  aws_util.py  create_mr_node.py  create_telemetry_server.py  dummy_index.html  launch_mapreduce_job.py  launch_process_incoming_node.py  launch_telemetry_server.py  process_incoming_distributed.py  process_incoming_queue.py
cmake/: FindLZMA.cmake  FindProtobuf.cmake  externals.cmake  mozsvc.cmake  rapidjson-0_11.patch
coordinator/: bootstrap.py  bootstrap_filtered.py  coordinator.js
docs/: CompressionBenchmarks.md  Deduplication.md  MapReduce.md  PayloadFormat.md  ProcessIncoming.md  StorageFormat.md  StorageLayout.md
examples/: dims_only.py  filter_include_all.json  filter_min_buildid.json  filter_min_max_buildid.json  osdistribution.py  trivial.py
heka/: heka.toml  sbmgr.toml  telemetry.lua  telemetry_channel.lua
http/: histogram_server.py  server.js  server_config.addon_hotfix.json  server_config.json
lib/: persist.py  revision_cache.py  test_convert.py
mapreduce/: hekajob.py  hekajob_stream.py  job.py
mongodb/: importer.py
node/: mreid.js  relay.js  server.js  unpack_log.py
process_incoming/: process_incoming_hotfix.py  process_incoming_mp.py  process_incoming_serial.py  process_incoming_standalone.py  run.py
process_incoming/worker/: CMakeLists.txt  ConvertConfig.cpp  ConvertConfig.h  convert.cpp  convert.json
process_incoming/worker/common/: CMakeLists.txt  Common.h  CompressedFileWriter.cpp  CompressedFileWriter.h  HekaLogger.cpp  HekaLogger.h  HistogramCache.cpp  HistogramCache.h  HistogramConverter.cpp  HistogramConverter.h  HistogramSpecification.cpp  HistogramSpecification.h  Logger.h  Metric.cpp  Metric.h  RecordWriter.cpp  RecordWriter.h  TelemetryConstants.h  TelemetryConstants.in.cpp  TelemetryRecord.cpp  TelemetryRecord.h  TelemetrySchema.cpp  TelemetrySchema.h  Utils.cpp  Utils.h  message.pb.cc  message.pb.h
process_incoming/worker/common/test/: CMakeLists.txt  TestConfig.in.h  TestHistogramCache.cpp  TestHistogramConverter.cpp  TestHistogramSpecification.cpp  TestRecordWriter.cpp  TestTelemetryRecord.cpp  TestTelemetrySchema.cpp
process_incoming/worker/common/test/data/: invalid.json  invalid_kind.json  missing_kind.json  telemetry_schema.json
process_incoming/worker/common/test/data/cache/: 8d3810543edc.json  a55c55edf302.json  ad0ae007aa9e.json
server/: pack_log.py  relay.js  server.js  server_config.json  server_config.spot.json  unpack_log.py
telemetry/: convert.py  hotfix_schema.json  infoFieldsMap.py  persist.py  revision_cache.py  telemetry_schema.json  telemetry_schema.py  test_convert.py  test_persist.py  test_revision_cache.py  (+1 more)
test/: test.txt  (+3 more)
(+273 files in other folders)
